--- a/fys4220-jbook/_static/myfile.css
+++ b/fys4220-jbook/_static/myfile.css
@@ -2,6 +2,22 @@ div.mermaid {
   text-align: center;
 }
 
+
+/* Make the logo taller */
+/*div.navbar-brand-box a.navbar-brand img {
+    max-height: 10vh !important;
+} 
+*/
+
+body {
+	background-color: #fff;
+    	color: #333
+}
+/*
+p {
+    text-align: justify;
+}
+*/
 .video-container {
   position: relative;
   width: 100%;
@@ -15,3 +31,12 @@ div.mermaid {
   width: 100%;
   height: 100%;
   }
+
+
+/* The side nav should be collapsed except the part you're in */
+/*
+ul.bd_sidenav:not(.current) {
+	display: none;
+}
+.tocsection.onthispage {}
+*/
